--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc (1.4.0-0ubuntu2+0sunxi2) trusty; urgency=medium
+
+  * Use uaccess tag
+
+ -- Simon Eisenmann <simon@longsleep.org>  Mon, 01 Aug 2016 01:34:54 +0200
+
 xf86-video-armsoc (1.4.0-0ubuntu2~0sunxi1) xenial; urgency=medium
 
   * Fixup git packaging
