--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc (1.4.0-0ubuntu2+0sunxi5) xenial; urgency=medium
+
+  * Run quilt before autogen
+
+ -- Simon Eisenmann <simon@longsleep.org>  Mon, 01 Aug 2016 14:33:13 +0200
+
 xf86-video-armsoc (1.4.0-0ubuntu2+0sunxi4) xenial; urgency=medium
 
   * Rebuild
