--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xf86-video-armsoc (1.4.1-0ubuntu2+0sunxi7~xenial1) xenial; urgency=medium
+
+  * Add support for `channel_id` on sunxi for xenial
+
+ -- Kamil Trzciński <ayufan@ayufan.eu>  Sat, 27 Oct 2018 22:10:52 +0200
+
 xf86-video-armsoc (1.4.1-0ubuntu2+0sunxi7~bionic1) bionic; urgency=medium
 
   * Add support for `channel_id` on sunxi for bionic
