--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+xf86-video-armsoc (1.4.1-0ubuntu2+0sunxi8~bionic1) bionic; urgency=medium
+
+  * Use non-contig memory to improve performance
+
+ -- Kamil Trzciński <ayufan@ayufan.eu>  Tue, 30 Oct 2018 14:08:57 +0100
+
+xf86-video-armsoc (1.4.1-0ubuntu2+0sunxi8~xenial1) xenial; urgency=medium
+
+  * Use non-contig memory to improve performance
+
+ -- Kamil Trzciński <ayufan@ayufan.eu>  Tue, 30 Oct 2018 14:07:55 +0100
+
 xf86-video-armsoc (1.4.1-0ubuntu2+0sunxi7~xenial1) xenial; urgency=medium
 
   * Add support for `channel_id` on sunxi for xenial
